# abstract-gik-task

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  abstract-gik-task.pc.cmake  abstractGikTask.pc.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Makefile.am  gikTask.dox.in  header.html
doc/additionalDoc/: gikTask.h
documentation/: Makefile.am  Makefile.in  footer.html  gikTask.dox.in  hpp.dox
documentation/additionalDoc/: gikTask.h
interfaces/: CMakeLists.txt  Makefile.am  Makefile.in  jrlGik1DPosConstraint.h  jrlGik2DOrientConstraint.h  jrlGik3DOrientConstraint.h  jrlGik3DPosConstraint.h  jrlGik6DFullConstraint.h  jrlGikComConstraint.h  jrlGikGazeConstraint.h  jrlGikJointStateConstraint.h  jrlGikMotionConstraint.h  jrlGikObjectConstructor.h  jrlGikParallelConstraint.h  jrlGikPlaneConstraint.h  jrlGikPointingConstraint.h  jrlGikPositionConstraint.h  jrlGikRotationConstraint.h  jrlGikStateConstraint.h  jrlGikTransformationConstraint.h  jrlGikWholeBodyMotionPlanner.h  jrlGikWholeBodyMotionTask.h  jrlGikWholeBodyStateSubtask.h  jrlGikWholeBodyStateTask.h  jrlLinearConstraint.h  jrlRobotMotion.h
