# Research carried out within the scope of the Associated
# International Laboratory: Joint Japanese-French Robotics Laboratory
# (JRL)
#
# Author: Florent Lamiraux
#

gikTaskdir = $(includedir)/gikTask
gikTask_HEADERS = \
	jrlGik1DPosConstraint.h \
	jrlGik2DOrientConstraint.h \
	jrlGik3DOrientConstraint.h \
	jrlGik3DPosConstraint.h \
	jrlGikMotionConstraint.h \
	jrlGikObjectConstructor.h \
	jrlGikStateConstraint.h \
	jrlGikWholeBodyMotionPlanner.h \
	jrlRobotMotion.h 
