# Research carried out within the scope of the Associated
# International Laboratory: Joint Japanese-French Robotics Laboratory
# (JRL)
#
# Author: Florent Lamiraux
#

gikTaskdir = $(includedir)/gikTask
gikTask_HEADERS = \
	jrlGikPlaneConstraint.h \
	jrlGikParallelConstraint.h \
	jrlGikRotationConstraint.h \
	jrlGikPositionConstraint.h \
	jrlGikTransformationConstraint.h \
	jrlGikMotionConstraint.h \
	jrlGikObjectConstructor.h \
	jrlGikStateConstraint.h \
	jrlGikPointingConstraint.h \
	jrlGikGazeConstraint.h \
	jrlGikJointStateConstraint.h \
	jrlGikWholeBodyMotionPlanner.h \
	jrlRobotMotion.h 
