# Research carried out within the scope of the Associated
# International Laboratory: Joint Japanese-French Robotics Laboratory
# (JRL)
#
# Author: Florent Lamiraux
#

gikTaskdir = $(includedir)/gikTask
gikTask_HEADERS = \
	jrlGikGazeConstraint.h \
	jrlGikJointStateConstraint.h \
	jrlGikMotionConstraint.h \
	jrlGikObjectConstructor.h \
	jrlGikParallelConstraint.h \
	jrlGikPlaneConstraint.h \
	jrlGikPointingConstraint.h \
	jrlGikPositionConstraint.h \
	jrlGikRotationConstraint.h \
	jrlGikStateConstraint.h \
	jrlGikTransformationConstraint.h \
	jrlRobotMotion.h 
